--- a/defaults/main/ports.yml
+++ b/defaults/main/ports.yml
@@ -7,7 +7,7 @@
 # Reference:
 # * https://github.com/r-pufky/ansible_ufw
 
-postgres_ports:
+postgres_srv_ports:
   - proto: 'tcp'
     from_ip: 'any'
     to_port: 5432
