--- a/molecule/hba_includes/molecule.yml
+++ b/molecule/hba_includes/molecule.yml
@@ -26,22 +26,22 @@ provisioner:
   inventory:
     group_vars:
       all:
-        postgres_hba_config:
+        postgres_cfg_hba:
           - comment: 'unauthenticated local login for testing'
             type: 'local'
             database: 'all'
             user: 'all'
             method: 'trust'
-        postgres_service_confd_path: '{{
+        postgres_srv_confd_path: '{{
             lookup("env", "MOLECULE_SCENARIO_DIRECTORY") ~
             "/files/conf.d"
           }}'
-        postgres_hba_include_dir:
+        postgres_cfg_hba_include_dir:
           - 'conf.d'
-        postgres_hba_include_if_exists:
+        postgres_cfg_hba_include_if_exists:
           - '/tmp/if_exists.conf'
           - '/tmp/does_not_exist.conf'
-        postgres_hba_include:
+        postgres_cfg_hba_include:
           - '/tmp/if_exists.conf'
 platforms:
   - name: 'postgres-debian-12-hba_includes'
