--- a/molecule/ident_includes/molecule.yml
+++ b/molecule/ident_includes/molecule.yml
@@ -26,7 +26,7 @@ provisioner:
   inventory:
     group_vars:
       all:
-        postgres_hba_config:
+        postgres_cfg_hba:
           - comment: 'unauthenticated local login for testing'
             type: 'local'
             database: 'all'
@@ -34,21 +34,21 @@ provisioner:
             method: 'peer'
             options:
               map: 'local_all'
-        postgres_ident_config:
+        postgres_cfg_ident:
           - comment: 'ident mapping'
             map_name: 'local_all'
             system_username: 'root'
             pg_username: 'postgres'
-        postgres_service_confd_path: '{{
+        postgres_srv_confd_path: '{{
             lookup("env", "MOLECULE_SCENARIO_DIRECTORY") ~
             "/files/conf.d"
           }}'
-        postgres_ident_include_dir:
+        postgres_cfg_ident_include_dir:
           - 'conf.d'
-        postgres_ident_include_if_exists:
+        postgres_cfg_ident_include_if_exists:
           - '/tmp/if_exists.conf'
           - '/tmp/does_not_exist.conf'
-        postgres_ident_include:
+        postgres_cfg_ident_include:
           - '/tmp/if_exists.conf'
 platforms:
   - name: 'postgres-debian-12-ident_includes'
