--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,6 +7,7 @@
 # Tests:
 # * Default installation results in a running Postgres server instance.
 # * Configuration files with options are rendered appropriately based on type.
+# * Alternative data storage user succeeds.
 
 dependency:
   name: 'galaxy'
@@ -23,7 +24,7 @@ provisioner:
   inventory:
     group_vars:
       all:
-        postgres_users:
+        postgres_cfg_users:
           - name: 'example'
             host: 'localhost'
             password: 'example'
@@ -45,13 +46,23 @@ provisioner:
                 - login_db: 'test1'
                   privs: 'ALL'
                   type: 'database'
-        postgres_databases:
+        postgres_cfg_databases:
           - name: 'test1'
             owner: 'example'
           - name: 'test2'
             owner: 'postgres'
+    host_vars:
+      postgres-debian-12-user_data:
+        posgres_srv_user_data_manage_enable: true
 platforms:
   - name: 'postgres-debian-12-default'
+    image: 'ghcr.io/hifis-net/debian-systemd:12'
+    systemd: 'always'
+    volumes:
+      - '/sys/fs/cgroup:/sys/fs/cgroup:ro'
+    command: '/lib/systemd/systemd'
+    pre_build_image: true
+  - name: 'postgres-debian-12-user_data'
     image: 'ghcr.io/hifis-net/debian-systemd:12'
     systemd: 'always'
     volumes:
@@ -71,7 +82,7 @@ scenario:
     - 'destroy'
     - 'syntax'
     - 'create'
-    # - 'prepare'
+    - 'prepare'
     - 'converge'
     # - 'idempotence'  # systemd services.
     # - 'side_effect'
