--- a/molecule/hba_includes/verify.yml
+++ b/molecule/hba_includes/verify.yml
@@ -1,46 +1,19 @@
 ---
-- name: 'HBA includes | verify database'
+- name: 'Verify database'
   hosts: 'all'
   gather_facts: false
   tasks:
-    - name: 'HBA includes | verify database | gather service status'
-      ansible.builtin.service_facts:
-
-    - name: 'HBA includes | verify database | gather service processes'
-      ansible.builtin.shell: 'set -o pipefail && ps aux | grep "postgres"'
-      args:
-        executable: '/bin/bash'
-      changed_when: false
-      register: _test_postgres_processes
-
-    # Will be enabled but not running, forked from @ service for version.
     - name:
-        'HBA includes | verify database | assert postgresql@.service enabled'
-      ansible.builtin.assert:
-        quiet: true
-        that:
-          - '"postgresql.service" in ansible_facts.services'
-          - 'ansible_facts["services"]["postgresql.service"]["status"] == "enabled"'  # yamllint disable-line rule:line-length
-        fail_msg: '✘ postgresql.service should be active.'
-
-    - name:
-        'HBA includes | verify database | assert postgresql@.service running'
-      ansible.builtin.assert:
-        quiet: true
-        that:
-          - _test_postgres_processes.stdout_lines | length > 2
-        fail_msg: '✘ Postgres has not successfully started.'
-
-    - name:
-        'HBA includes | verify config | /etc/postgresql/17/main/pg_hba.conf'
+        'Verify config | /etc/postgresql/17/main/pg_hba.conf'
       ansible.builtin.include_role:
         name: 'r_pufky.lib.tests'
         tasks_from: 'copy.yml'
       vars:
         test_name:
-          'HBA includes | verify config | /etc/postgresql/17/main/pg_hba.conf'
+          'Verify config | /etc/postgresql/17/main/pg_hba.conf'
         test_src: 'files/pg_hba.conf'
         test_file: '/etc/postgresql/17/main/pg_hba.conf'
         test_owner: 'postgres'
         test_group: 'postgres'
         test_mode: '0640'
+        test_diff: true
