--- a/molecule/ident_includes/verify.yml
+++ b/molecule/ident_includes/verify.yml
@@ -1,47 +1,17 @@
 ---
-- name: 'Ident includes | verify database'
+- name: 'Verify'
   hosts: 'postgres-debian-12-ident_includes'
   gather_facts: false
   tasks:
-    - name: 'Ident includes | verify database | gather service status'
-      ansible.builtin.service_facts:
-
-    - name: 'Ident includes | verify database | gather service processes'
-      ansible.builtin.shell: 'set -o pipefail && ps aux | grep "postgres"'
-      args:
-        executable: '/bin/bash'
-      changed_when: false
-      register: _test_postgres_processes
-
-    # Will be enabled but not running, forked from @ service for version.
-    - name:
-        'Ident includes | verify database | assert postgresql@.service enabled'
-      ansible.builtin.assert:
-        quiet: true
-        that:
-          - '"postgresql.service" in ansible_facts.services'
-          - 'ansible_facts["services"]["postgresql.service"]["status"] == "enabled"'  # yamllint disable-line rule:line-length
-        fail_msg: '✘ postgresql.service should be active.'
-
-    - name:
-        'Ident includes | verify database | assert postgresql@.service running'
-      ansible.builtin.assert:
-        quiet: true
-        that:
-          - _test_postgres_processes.stdout_lines | length > 2
-        fail_msg: '✘ Postgres has not successfully started.'
-
-    - name: >
-        Ident includes | verify config | /etc/postgresql/17/main/pg_ident.conf
+    - name: 'Verify | /etc/postgresql/17/main/pg_ident.conf'
       ansible.builtin.include_role:
         name: 'r_pufky.lib.tests'
         tasks_from: 'copy.yml'
       vars:
-        test_name: >
-          Ident includes | verify config |
-          /etc/postgresql/17/main/pg_ident.conf
+        test_name: 'Verify | /etc/postgresql/17/main/pg_ident.conf'
         test_src: 'files/pg_ident.conf'
         test_file: '/etc/postgresql/17/main/pg_ident.conf'
         test_owner: 'postgres'
         test_group: 'postgres'
         test_mode: '0640'
+        test_diff: true
