--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -12,59 +12,66 @@
 # everything else mapping to nobody/nogroup). Execute commands touching those
 # root mount points as postgres user to ensure they can be read or written.
 #
-# Args:
-#   _postgres_etc_dir: str - path to versioned postgres install.
-#   _postgres_scripts: str - path to versioned custom scripts.
-#   _postgres_bin: str - path to postgres versioned binary utilities.
-#   _postgres_start_config: dict - sanitized start configuration.
-#   _postgres_hba: list of dict - sanitized HBA configuration.
+# Default service does not log configuration errors on startup. This must be
+# done manually to see what configuration issues are occurring. With a default
+# installation location, run:
+#
+#   su - postgres
+#   /usr/lib/postgresql/17/bin/postgres -d 3 \
+#   -D /var/lib/postgresql/17/main \
+#   -c config_file=/etc/postgresql/17/main/postgresql.conf
 #
 # Reference:
 # * https://www.postgresql.org/docs/current/config-setting.html
 
 - name: 'Config | check data directory initialization'
   ansible.builtin.stat:
-    path: '{{ postgres_config.data_directory }}/PG_VERSION'
-  become: true
-  become_user: '{{ postgres_user }}'  # Mounts may have user restrictions.
+    path: '{{ _postgres_cfg_data_directory.raw }}'
+  become:
+    '{{ true if _postgres_srv_user_data_manage_enable.raw else omit }}'
+  become_user: '{{
+      _postgres_srv_user.raw
+      if _postgres_srv_user_data_manage_enable.raw else
+      omit
+    }}'
   register: _postgres_init
 
 - name: 'Config | initialize data directory'
   when: not _postgres_init.stat.exists
   ansible.builtin.command:
     argv:
-      - '{{ _postgres_bin }}/initdb'
+      - '{{ _postgres_cfg_data_directory.role }}'
       - '-D'
-      - '{{ postgres_config.data_directory }}'
+      - '{{ _postgres_cfg_data_directory.raw }}'
   become: true
-  become_user: '{{ postgres_user }}'  # Mounts may have user restrictions.
+  become_user: '{{ _postgres_srv_user.raw }}'
   changed_when: true
 
 - name: 'Config | enable backups'
-  when: postgres_databases_backup_enable
+  when: _postgres_cfg_databases_backup_enable.raw
   block:
     - name: 'Config | enable backups | set backup directory'
       ansible.builtin.file:
-        dest: '{{ postgres_databases_backup_dir }}'
-        owner: '{{ postgres_user }}'
-        group: '{{ postgres_group }}'
+        dest: '{{ _postgres_cfg_databases_backup_dir.raw }}'
+        owner: '{{ _postgres_srv_user.parsed }}'
+        group: '{{ _postgres_srv_group.parsed }}'
         mode: '0755'
         state: 'directory'
 
     - name: 'Config | enable backups | set scripts directory'
       ansible.builtin.file:
-        dest: '{{ _postgres_scripts }}'
-        owner: '{{ postgres_user }}'
-        group: '{{ postgres_group }}'
+        dest: '{{ _postgres.scripts }}'
+        owner: '{{ _postgres_srv_user.parsed }}'
+        group: '{{ _postgres_srv_group.parsed }}'
         mode: '0755'
         state: 'directory'
 
     - name: 'Config | enable backups | set backup script'
       ansible.builtin.template:
         src: 'postgres_backup.j2'
-        dest: '{{ _postgres_scripts }}/postgres_backup'
-        owner: '{{ postgres_user }}'
-        group: '{{ postgres_group }}'
+        dest: '{{ _postgres_cfg_databases_backup_enable.role }}'
+        owner: '{{ _postgres_srv_user.parsed }}'
+        group: '{{ _postgres_srv_group.parsed }}'
         mode: '0700'
 
     - name: 'Config | enable backups | create backup service'
@@ -80,7 +87,7 @@
               requires: ['postgres_backup.timer']
             service:
               type: 'simple'
-              exec_start: ['{{ _postgres_scripts }}/postgres_backup']
+              exec_start: ['{{ _postgres_cfg_databases_backup_enable.role }}']
             exec:
               user: 'root'
               group: 'root'
@@ -92,16 +99,17 @@
               description: 'MariaDB backup service timer.'
             timer:
               unit: 'postgres_backup.service'
-              on_calendar: ['{{ postgres_databases_backup_schedule }}']
+              on_calendar:
+                - '{{ _postgres_cfg_databases_backup_schedule.raw }}'
             install:
               wanted_by: ['timers.target']
 
 - name: 'Config | disable backups'
-  when: not postgres_databases_backup_enable
+  when: not _postgres_cfg_databases_backup_enable.raw
   block:
     - name: 'Config | disable backups | set backup script'
       ansible.builtin.file:
-        dest: '{{ _postgres_scripts }}/postgres_backup'
+        dest: '{{ _postgres_cfg_databases_backup_enable.role }}'
         state: 'absent'
 
     - name: 'Config | disable backups | remove backup service'
@@ -119,43 +127,47 @@
 
 - name: 'Config | create data directory'
   ansible.builtin.file:
-    path: '{{ postgres_config.data_directory }}'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    path: '{{ _postgres_cfg_data_directory.raw }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0700'
     state: 'directory'
-  become: true
-  become_user: '{{ postgres_user }}'  # Mounts may have user restrictions.
+  become:
+    '{{ true if _postgres_srv_user_data_manage_enable.raw else omit }}'
+  become_user: '{{
+      _postgres_srv_user.raw
+      if _postgres_srv_user_data_manage_enable.raw else
+      omit
+    }}'
 
 - name: 'Config | create HBA directory'
   ansible.builtin.file:
-    path: '{{ postgres_config.hba_file | dirname }}'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    path: '{{ _postgres_cfg_hba_file.parsed }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0755'
     state: 'directory'
 
 - name: 'Config | create ident directory'
   ansible.builtin.file:
-    path: '{{ postgres_config.ident_file | dirname }}'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    path: '{{ _postgres_cfg_ident_file.parsed }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0755'
     state: 'directory'
 
 - name: 'Config | create PID directory'
   ansible.builtin.file:
-    path: '{{ postgres_config.external_pid_file | dirname }}'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    path: '{{ _postgres_cfg_external_pid_file.parsed }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '2775'
     state: 'directory'
 
 # Custom data directories require setting shell environments correctly so they
 # can be used (e.g. further in the role to manage postgres database).
 - name: 'Config | set postgres global environment profile'
-  when: postgres_service_profile_path | length == 0
-  notify: 'Handlers | restart postgres'
+  when: _postgres_srv_profile_path.raw | length == 0
   ansible.builtin.template:
     src: 'postgres.j2'
     dest: '/etc/profile.d/postgres'
@@ -164,10 +176,9 @@
     mode: '0644'
 
 - name: 'Config | set custom postgres global environment profile'
-  when: postgres_service_profile_path | length > 0
-  notify: 'Handlers | restart postgres'
+  when: _postgres_srv_profile_path.raw | length > 0
   ansible.builtin.copy:
-    src: '{{ postgres_service_profile_path }}'
+    src: '{{ _postgres_srv_profile_path.role }}'
     dest: '/etc/profile.d/postgres'
     owner: 'root'
     group: 'root'
@@ -177,77 +188,76 @@
 - name: 'Config | set database owner script'
   ansible.builtin.template:
     src: 'postgres_owner.j2'
-    dest: '{{ _postgres_scripts }}/postgres_owner'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    dest: '{{ _postgres_cfg_databases.role }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0700'
 
 - name: 'Config | set conf.d'
-  when: postgres_service_confd_path | length > 0
-  notify: 'Handlers | restart postgres'
+  when: _postgres_srv_confd_path.raw | length > 0
   ansible.builtin.copy:
-    src: '{{ postgres_service_confd_path }}'
-    dest: '{{ _postgres_etc_dir }}/main/conf.d'
+    src: '{{ _postgres_srv_confd_path.role }}'
+    dest: '{{ _postgres.confd }}'
     owner: 'root'
     group: 'root'
     mode: '0640'
     force: true
 
 - name: 'Config | set environment'
-  notify: 'Handlers | restart postgres'
   ansible.builtin.template:
     src: 'environment.j2'
-    dest: '{{ _postgres_etc_dir }}/main/environment'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    dest: '{{ _postgres.environment }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0644'
 
 - name: 'Config | set postgresql.conf'
-  notify: 'Handlers | restart postgres'
   ansible.builtin.template:
     src: 'postgresql.conf.j2'
-    dest: '{{ _postgres_etc_dir }}/main/postgresql.conf'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    dest: '{{ _postgres.postgresql }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0644'
 
 - name: 'Config | set pg_ctl.conf'
-  notify: 'Handlers | restart postgres'
   ansible.builtin.template:
     src: 'pg_ctl.conf.j2'
-    dest: '{{ _postgres_etc_dir }}/main/pg_ctl.conf'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    dest: '{{ _postgres.pg_ctl }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0644'
 
 - name: 'Config | set pg_hba.conf'
-  notify: 'Handlers | restart postgres'
   ansible.builtin.template:
     src: 'pg_hba.conf.j2'
-    dest: '{{ postgres_config.hba_file }}'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    dest: '{{ _postgres.pg_hba }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0640'
 
 - name: 'Config | set pg_ident.conf'
-  notify: 'Handlers | restart postgres'
   ansible.builtin.template:
     src: 'pg_ident.conf.j2'
-    dest: '{{ postgres_config.ident_file }}'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    dest: '{{ _postgres.pg_ident }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0640'
 
-# daemon-reload required if changing start.conf.
+
 - name: 'Config | set start.conf'
-  notify: 'Handlers | restart postgres'
   ansible.builtin.template:
     src: 'start.conf.j2'
-    dest: '{{ _postgres_etc_dir }}/main/start.conf'
-    owner: '{{ postgres_user }}'
-    group: '{{ postgres_group }}'
+    dest: '{{ _postgres.start }}'
+    owner: '{{ _postgres_srv_user.parsed }}'
+    group: '{{ _postgres_srv_group.parsed }}'
     mode: '0644'
 
-# Force restart to apply new options/locales before DB modifications.
-- name: 'Config | start service'
-  ansible.builtin.meta: 'flush_handlers'
+- name: 'Config | start services'
+  ansible.builtin.systemd:
+    name: '{{ item }}'
+    enabled: true
+    daemon_reload: true  # daemon-reload required for start.conf.
+    state: 'restarted'
+  failed_when: false
+  loop:
+    - 'postgresql.service'
