--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+- name: 'Annotate'
+  ansible.builtin.import_tasks: 'annotate.yml'
 - name: 'Prep'
   ansible.builtin.include_tasks: 'prep.yml'
 
@@ -15,3 +17,5 @@
   ansible.builtin.include_tasks: 'config.yml'
 - name: 'Manage'
   ansible.builtin.include_tasks: 'manage.yml'
+- name: 'Validate'
+  ansible.builtin.include_tasks: 'validate.yml'
